--- a/informationextractorGithub/pom.xml
+++ b/informationextractorGithub/pom.xml
@@ -56,6 +56,13 @@
 			<artifactId>poi</artifactId>
 			<version>4.1.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.14</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
